parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    FALSE
    IGUALIGUAL
    NOT
    STR
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM agregarTablaFunciones varss funcs MAIN APAR CPAR ALLA poptomain estatutos CLLA
Rule 2     agregarTablaFunciones -> ID PTCOMA
Rule 3     poptomain -> <empty>
Rule 4     varss -> VARS vars
Rule 5     varss -> empty
Rule 6     vars -> tipo DOSPNTS insertVar varsppp varspp vars
Rule 7     vars -> empty
Rule 8     insertVar -> ID
Rule 9     varsppp -> ACOR CTEI CCOR
Rule 10    varsppp -> empty
Rule 11    varspp -> PTCOMA
Rule 12    varspp -> COMA insertVar varsppp varspp
Rule 13    funcs -> FUNCTION funcsp insertFunc funcspp
Rule 14    funcs -> empty
Rule 15    insertFunc -> ID
Rule 16    funcspp -> APAR params CPAR updateParamTable PTCOMA varss ALLA addsize estatutos CLLA endfunction funcs
Rule 17    updateParamTable -> <empty>
Rule 18    endfunction -> <empty>
Rule 19    addsize -> <empty>
Rule 20    funcsp -> VOID
Rule 21    funcsp -> tipo
Rule 22    estatutos -> asig estatutop
Rule 23    estatutos -> return estatutop
Rule 24    estatutos -> lectura estatutop
Rule 25    estatutos -> escritura estatutop
Rule 26    estatutos -> cond estatutop
Rule 27    estatutos -> while estatutop
Rule 28    estatutos -> for estatutop
Rule 29    estatutos -> exp estatutop
Rule 30    estatutop -> estatutos
Rule 31    estatutop -> empty
Rule 32    tipo -> INT
Rule 33    tipo -> FLOAT
Rule 34    tipo -> CHAR
Rule 35    params -> tipo DOSPNTS insertParams ididx paramsp
Rule 36    params -> empty
Rule 37    insertParams -> ID
Rule 38    paramsp -> COMA params
Rule 39    paramsp -> empty
Rule 40    asig -> varAs ididx igualAs asigpp PTCOMA
Rule 41    varAs -> ID
Rule 42    igualAs -> IGUAL
Rule 43    asigp -> exp asigppp
Rule 44    asigp -> empty
Rule 45    asigppp -> COMA asigp
Rule 46    asigppp -> empty
Rule 47    asigpp -> exp
Rule 48    asigpp -> ACOR asigp CCOR
Rule 49    ididx -> ACOR exp CCOR
Rule 50    ididx -> empty
Rule 51    return -> RETURN APAR exp CPAR PTCOMA
Rule 52    lectura -> READ APAR readId ididx lecturapp CPAR PTCOMA
Rule 53    readId -> ID
Rule 54    lecturapp -> COMA readId ididx lecturapp
Rule 55    lecturapp -> empty
Rule 56    escritura -> WRITE APAR escriturap escriturapp CPAR PTCOMA
Rule 57    escriturap -> pushEsc
Rule 58    escriturap -> exp
Rule 59    pushEsc -> STRING
Rule 60    pushEsc -> CTEC
Rule 61    escriturapp -> COMA escriturap
Rule 62    escriturapp -> empty
Rule 63    cond -> IF APAR exp checkCond THEN ALLA estatutos CLLA condpp
Rule 64    condpp -> checkElse ALLA estatutos CLLA
Rule 65    condpp -> empty
Rule 66    checkElse -> ELSE
Rule 67    checkCond -> CPAR
Rule 68    while -> saveWhile APAR exp checkWhileCond DO ALLA estatutos CLLA
Rule 69    saveWhile -> WHILE
Rule 70    checkWhileCond -> CPAR
Rule 71    for -> FOR varFor ididx IGUAL exp initFor exp beforeDo ALLA estatutos CLLA
Rule 72    varFor -> ID
Rule 73    initFor -> TO
Rule 74    beforeDo -> DO
Rule 75    exp -> texp expp
Rule 76    expp -> OR exp
Rule 77    expp -> empty
Rule 78    texp -> gexp texpp
Rule 79    texpp -> andCheck texp
Rule 80    texpp -> empty
Rule 81    andCheck -> AND
Rule 82    gexp -> mexp gexpp
Rule 83    gexpp -> addPO mexp
Rule 84    gexpp -> empty
Rule 85    addPO -> MAYQ
Rule 86    addPO -> MENQ
Rule 87    addPO -> MAYI
Rule 88    addPO -> MENI
Rule 89    addPO -> IGUAL IGUAL
Rule 90    addPO -> DIF
Rule 91    mexp -> termino mexpp
Rule 92    mexpp -> operSR mexp
Rule 93    mexpp -> empty
Rule 94    operSR -> MENOS
Rule 95    operSR -> MAS
Rule 96    termino -> factor terminop
Rule 97    terminop -> oper termino
Rule 98    terminop -> empty
Rule 99    oper -> DIV
Rule 100   oper -> POR
Rule 101   factor -> APAR exp CPAR
Rule 102   factor -> ctes
Rule 103   factorp -> APAR exp factorpp CPAR
Rule 104   factorp -> ACOR exp CCOR
Rule 105   factorp -> empty
Rule 106   factorpp -> COMA exp factorpp
Rule 107   factorpp -> empty
Rule 108   ctes -> CTEC
Rule 109   ctes -> CTEI
Rule 110   ctes -> CTEF
Rule 111   ctes -> ID validateExistance factorp
Rule 112   validateExistance -> <empty>
Rule 113   empty -> <empty>

Terminals, with rules where they appear

ACOR                 : 9 48 49 104
ALLA                 : 1 16 63 64 68 71
AND                  : 81
APAR                 : 1 16 51 52 56 63 68 101 103
BOOL                 : 
CCOR                 : 9 48 49 104
CHAR                 : 34
CLLA                 : 1 16 63 64 68 71
COMA                 : 12 38 45 54 61 106
CPAR                 : 1 16 51 52 56 67 70 101 103
CTEC                 : 60 108
CTEF                 : 110
CTEI                 : 9 109
DIF                  : 90
DIV                  : 99
DO                   : 68 74
DOSPNTS              : 6 35
ELSE                 : 66
FALSE                : 
FLOAT                : 33
FOR                  : 71
FUNCTION             : 13
ID                   : 2 8 15 37 41 53 72 111
IF                   : 63
IGUAL                : 42 71 89 89
IGUALIGUAL           : 
INT                  : 32
MAIN                 : 1
MAS                  : 95
MAYI                 : 87
MAYQ                 : 85
MENI                 : 88
MENOS                : 94
MENQ                 : 86
NOT                  : 
OR                   : 76
POR                  : 100
PROGRAM              : 1
PTCOMA               : 2 11 16 40 51 52 56
READ                 : 52
RETURN               : 51
STR                  : 
STRING               : 59
THEN                 : 63
TO                   : 73
TRUE                 : 
VARS                 : 4
VOID                 : 20
WHILE                : 69
WRITE                : 56
error                : 

Nonterminals, with rules where they appear

addPO                : 83
addsize              : 16
agregarTablaFunciones : 1
andCheck             : 79
asig                 : 22
asigp                : 45 48
asigpp               : 40
asigppp              : 43
beforeDo             : 71
checkCond            : 63
checkElse            : 64
checkWhileCond       : 68
cond                 : 26
condpp               : 63
ctes                 : 102
empty                : 5 7 10 14 31 36 39 44 46 50 55 62 65 77 80 84 93 98 105 107
endfunction          : 16
escritura            : 25
escriturap           : 56 61
escriturapp          : 56
estatutop            : 22 23 24 25 26 27 28 29
estatutos            : 1 16 30 63 64 68 71
exp                  : 29 43 47 49 51 58 63 68 71 71 76 101 103 104 106
expp                 : 75
factor               : 96
factorp              : 111
factorpp             : 103 106
for                  : 28
funcs                : 1 16
funcsp               : 13
funcspp              : 13
gexp                 : 78
gexpp                : 82
ididx                : 35 40 52 54 71
igualAs              : 40
initFor              : 71
insertFunc           : 13
insertParams         : 35
insertVar            : 6 12
lectura              : 24
lecturapp            : 52 54
mexp                 : 82 83 92
mexpp                : 91
oper                 : 97
operSR               : 92
params               : 16 38
paramsp              : 35
poptomain            : 1
program              : 0
pushEsc              : 57
readId               : 52 54
return               : 23
saveWhile            : 68
termino              : 91 97
terminop             : 96
texp                 : 75 79
texpp                : 78
tipo                 : 6 21 35
updateParamTable     : 16
validateExistance    : 111
varAs                : 40
varFor               : 71
vars                 : 4 6
varspp               : 6 12
varsppp              : 6 12
varss                : 1 16
while                : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM agregarTablaFunciones varss funcs MAIN APAR CPAR ALLA poptomain estatutos CLLA

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . agregarTablaFunciones varss funcs MAIN APAR CPAR ALLA poptomain estatutos CLLA
    (2) agregarTablaFunciones -> . ID PTCOMA

    ID              shift and go to state 4

    agregarTablaFunciones          shift and go to state 3

state 3

    (1) program -> PROGRAM agregarTablaFunciones . varss funcs MAIN APAR CPAR ALLA poptomain estatutos CLLA
    (4) varss -> . VARS vars
    (5) varss -> . empty
    (113) empty -> .

    VARS            shift and go to state 6
    FUNCTION        reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)

    varss                          shift and go to state 5
    empty                          shift and go to state 7

state 4

    (2) agregarTablaFunciones -> ID . PTCOMA

    PTCOMA          shift and go to state 8


state 5

    (1) program -> PROGRAM agregarTablaFunciones varss . funcs MAIN APAR CPAR ALLA poptomain estatutos CLLA
    (13) funcs -> . FUNCTION funcsp insertFunc funcspp
    (14) funcs -> . empty
    (113) empty -> .

    FUNCTION        shift and go to state 10
    MAIN            reduce using rule 113 (empty -> .)

    funcs                          shift and go to state 9
    empty                          shift and go to state 11

state 6

    (4) varss -> VARS . vars
    (6) vars -> . tipo DOSPNTS insertVar varsppp varspp vars
    (7) vars -> . empty
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (113) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)
    ALLA            reduce using rule 113 (empty -> .)

    vars                           shift and go to state 12
    tipo                           shift and go to state 13
    empty                          shift and go to state 14

state 7

    (5) varss -> empty .

    FUNCTION        reduce using rule 5 (varss -> empty .)
    MAIN            reduce using rule 5 (varss -> empty .)
    ALLA            reduce using rule 5 (varss -> empty .)


state 8

    (2) agregarTablaFunciones -> ID PTCOMA .

    VARS            reduce using rule 2 (agregarTablaFunciones -> ID PTCOMA .)
    FUNCTION        reduce using rule 2 (agregarTablaFunciones -> ID PTCOMA .)
    MAIN            reduce using rule 2 (agregarTablaFunciones -> ID PTCOMA .)


state 9

    (1) program -> PROGRAM agregarTablaFunciones varss funcs . MAIN APAR CPAR ALLA poptomain estatutos CLLA

    MAIN            shift and go to state 18


state 10

    (13) funcs -> FUNCTION . funcsp insertFunc funcspp
    (20) funcsp -> . VOID
    (21) funcsp -> . tipo
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR

    VOID            shift and go to state 20
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    funcsp                         shift and go to state 19
    tipo                           shift and go to state 21

state 11

    (14) funcs -> empty .

    MAIN            reduce using rule 14 (funcs -> empty .)


state 12

    (4) varss -> VARS vars .

    FUNCTION        reduce using rule 4 (varss -> VARS vars .)
    MAIN            reduce using rule 4 (varss -> VARS vars .)
    ALLA            reduce using rule 4 (varss -> VARS vars .)


state 13

    (6) vars -> tipo . DOSPNTS insertVar varsppp varspp vars

    DOSPNTS         shift and go to state 22


state 14

    (7) vars -> empty .

    FUNCTION        reduce using rule 7 (vars -> empty .)
    MAIN            reduce using rule 7 (vars -> empty .)
    ALLA            reduce using rule 7 (vars -> empty .)


state 15

    (32) tipo -> INT .

    DOSPNTS         reduce using rule 32 (tipo -> INT .)
    ID              reduce using rule 32 (tipo -> INT .)


state 16

    (33) tipo -> FLOAT .

    DOSPNTS         reduce using rule 33 (tipo -> FLOAT .)
    ID              reduce using rule 33 (tipo -> FLOAT .)


state 17

    (34) tipo -> CHAR .

    DOSPNTS         reduce using rule 34 (tipo -> CHAR .)
    ID              reduce using rule 34 (tipo -> CHAR .)


state 18

    (1) program -> PROGRAM agregarTablaFunciones varss funcs MAIN . APAR CPAR ALLA poptomain estatutos CLLA

    APAR            shift and go to state 23


state 19

    (13) funcs -> FUNCTION funcsp . insertFunc funcspp
    (15) insertFunc -> . ID

    ID              shift and go to state 25

    insertFunc                     shift and go to state 24

state 20

    (20) funcsp -> VOID .

    ID              reduce using rule 20 (funcsp -> VOID .)


state 21

    (21) funcsp -> tipo .

    ID              reduce using rule 21 (funcsp -> tipo .)


state 22

    (6) vars -> tipo DOSPNTS . insertVar varsppp varspp vars
    (8) insertVar -> . ID

    ID              shift and go to state 27

    insertVar                      shift and go to state 26

state 23

    (1) program -> PROGRAM agregarTablaFunciones varss funcs MAIN APAR . CPAR ALLA poptomain estatutos CLLA

    CPAR            shift and go to state 28


state 24

    (13) funcs -> FUNCTION funcsp insertFunc . funcspp
    (16) funcspp -> . APAR params CPAR updateParamTable PTCOMA varss ALLA addsize estatutos CLLA endfunction funcs

    APAR            shift and go to state 30

    funcspp                        shift and go to state 29

state 25

    (15) insertFunc -> ID .

    APAR            reduce using rule 15 (insertFunc -> ID .)


state 26

    (6) vars -> tipo DOSPNTS insertVar . varsppp varspp vars
    (9) varsppp -> . ACOR CTEI CCOR
    (10) varsppp -> . empty
    (113) empty -> .

    ACOR            shift and go to state 32
    PTCOMA          reduce using rule 113 (empty -> .)
    COMA            reduce using rule 113 (empty -> .)

    varsppp                        shift and go to state 31
    empty                          shift and go to state 33

state 27

    (8) insertVar -> ID .

    ACOR            reduce using rule 8 (insertVar -> ID .)
    PTCOMA          reduce using rule 8 (insertVar -> ID .)
    COMA            reduce using rule 8 (insertVar -> ID .)


state 28

    (1) program -> PROGRAM agregarTablaFunciones varss funcs MAIN APAR CPAR . ALLA poptomain estatutos CLLA

    ALLA            shift and go to state 34


state 29

    (13) funcs -> FUNCTION funcsp insertFunc funcspp .

    MAIN            reduce using rule 13 (funcs -> FUNCTION funcsp insertFunc funcspp .)


state 30

    (16) funcspp -> APAR . params CPAR updateParamTable PTCOMA varss ALLA addsize estatutos CLLA endfunction funcs
    (35) params -> . tipo DOSPNTS insertParams ididx paramsp
    (36) params -> . empty
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (113) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    CPAR            reduce using rule 113 (empty -> .)

    params                         shift and go to state 35
    tipo                           shift and go to state 36
    empty                          shift and go to state 37

state 31

    (6) vars -> tipo DOSPNTS insertVar varsppp . varspp vars
    (11) varspp -> . PTCOMA
    (12) varspp -> . COMA insertVar varsppp varspp

    PTCOMA          shift and go to state 39
    COMA            shift and go to state 40

    varspp                         shift and go to state 38

state 32

    (9) varsppp -> ACOR . CTEI CCOR

    CTEI            shift and go to state 41


state 33

    (10) varsppp -> empty .

    PTCOMA          reduce using rule 10 (varsppp -> empty .)
    COMA            reduce using rule 10 (varsppp -> empty .)


state 34

    (1) program -> PROGRAM agregarTablaFunciones varss funcs MAIN APAR CPAR ALLA . poptomain estatutos CLLA
    (3) poptomain -> .

    RETURN          reduce using rule 3 (poptomain -> .)
    READ            reduce using rule 3 (poptomain -> .)
    WRITE           reduce using rule 3 (poptomain -> .)
    IF              reduce using rule 3 (poptomain -> .)
    FOR             reduce using rule 3 (poptomain -> .)
    ID              reduce using rule 3 (poptomain -> .)
    WHILE           reduce using rule 3 (poptomain -> .)
    APAR            reduce using rule 3 (poptomain -> .)
    CTEC            reduce using rule 3 (poptomain -> .)
    CTEI            reduce using rule 3 (poptomain -> .)
    CTEF            reduce using rule 3 (poptomain -> .)

    poptomain                      shift and go to state 42

state 35

    (16) funcspp -> APAR params . CPAR updateParamTable PTCOMA varss ALLA addsize estatutos CLLA endfunction funcs

    CPAR            shift and go to state 43


state 36

    (35) params -> tipo . DOSPNTS insertParams ididx paramsp

    DOSPNTS         shift and go to state 44


state 37

    (36) params -> empty .

    CPAR            reduce using rule 36 (params -> empty .)


state 38

    (6) vars -> tipo DOSPNTS insertVar varsppp varspp . vars
    (6) vars -> . tipo DOSPNTS insertVar varsppp varspp vars
    (7) vars -> . empty
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (113) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)
    ALLA            reduce using rule 113 (empty -> .)

    tipo                           shift and go to state 13
    vars                           shift and go to state 45
    empty                          shift and go to state 14

state 39

    (11) varspp -> PTCOMA .

    INT             reduce using rule 11 (varspp -> PTCOMA .)
    FLOAT           reduce using rule 11 (varspp -> PTCOMA .)
    CHAR            reduce using rule 11 (varspp -> PTCOMA .)
    FUNCTION        reduce using rule 11 (varspp -> PTCOMA .)
    MAIN            reduce using rule 11 (varspp -> PTCOMA .)
    ALLA            reduce using rule 11 (varspp -> PTCOMA .)


state 40

    (12) varspp -> COMA . insertVar varsppp varspp
    (8) insertVar -> . ID

    ID              shift and go to state 27

    insertVar                      shift and go to state 46

state 41

    (9) varsppp -> ACOR CTEI . CCOR

    CCOR            shift and go to state 47


state 42

    (1) program -> PROGRAM agregarTablaFunciones varss funcs MAIN APAR CPAR ALLA poptomain . estatutos CLLA
    (22) estatutos -> . asig estatutop
    (23) estatutos -> . return estatutop
    (24) estatutos -> . lectura estatutop
    (25) estatutos -> . escritura estatutop
    (26) estatutos -> . cond estatutop
    (27) estatutos -> . while estatutop
    (28) estatutos -> . for estatutop
    (29) estatutos -> . exp estatutop
    (40) asig -> . varAs ididx igualAs asigpp PTCOMA
    (51) return -> . RETURN APAR exp CPAR PTCOMA
    (52) lectura -> . READ APAR readId ididx lecturapp CPAR PTCOMA
    (56) escritura -> . WRITE APAR escriturap escriturapp CPAR PTCOMA
    (63) cond -> . IF APAR exp checkCond THEN ALLA estatutos CLLA condpp
    (68) while -> . saveWhile APAR exp checkWhileCond DO ALLA estatutos CLLA
    (71) for -> . FOR varFor ididx IGUAL exp initFor exp beforeDo ALLA estatutos CLLA
    (75) exp -> . texp expp
    (41) varAs -> . ID
    (69) saveWhile -> . WHILE
    (78) texp -> . gexp texpp
    (82) gexp -> . mexp gexpp
    (91) mexp -> . termino mexpp
    (96) termino -> . factor terminop
    (101) factor -> . APAR exp CPAR
    (102) factor -> . ctes
    (108) ctes -> . CTEC
    (109) ctes -> . CTEI
    (110) ctes -> . CTEF
    (111) ctes -> . ID validateExistance factorp

    RETURN          shift and go to state 59
    READ            shift and go to state 60
    WRITE           shift and go to state 61
    IF              shift and go to state 62
    FOR             shift and go to state 64
    ID              shift and go to state 66
    WHILE           shift and go to state 67
    APAR            shift and go to state 48
    CTEC            shift and go to state 73
    CTEI            shift and go to state 74
    CTEF            shift and go to state 75

    estatutos                      shift and go to state 49
    asig                           shift and go to state 50
    return                         shift and go to state 51
    lectura                        shift and go to state 52
    escritura                      shift and go to state 53
    cond                           shift and go to state 54
    while                          shift and go to state 55
    for                            shift and go to state 56
    exp                            shift and go to state 57
    varAs                          shift and go to state 58
    saveWhile                      shift and go to state 63
    texp                           shift and go to state 65
    gexp                           shift and go to state 68
    mexp                           shift and go to state 69
    termino                        shift and go to state 70
    factor                         shift and go to state 71
    ctes                           shift and go to state 72

state 43

    (16) funcspp -> APAR params CPAR . updateParamTable PTCOMA varss ALLA addsize estatutos CLLA endfunction funcs
    (17) updateParamTable -> .

    PTCOMA          reduce using rule 17 (updateParamTable -> .)

    updateParamTable               shift and go to state 76

state 44

    (35) params -> tipo DOSPNTS . insertParams ididx paramsp
    (37) insertParams -> . ID

    ID              shift and go to state 78

    insertParams                   shift and go to state 77

state 45

    (6) vars -> tipo DOSPNTS insertVar varsppp varspp vars .

    FUNCTION        reduce using rule 6 (vars -> tipo DOSPNTS insertVar varsppp varspp vars .)
    MAIN            reduce using rule 6 (vars -> tipo DOSPNTS insertVar varsppp varspp vars .)
    ALLA            reduce using rule 6 (vars -> tipo DOSPNTS insertVar varsppp varspp vars .)


state 46

    (12) varspp -> COMA insertVar . varsppp varspp
    (9) varsppp -> . ACOR CTEI CCOR
    (10) varsppp -> . empty
    (113) empty -> .

    ACOR            shift and go to state 32
    PTCOMA          reduce using rule 113 (empty -> .)
    COMA            reduce using rule 113 (empty -> .)

    varsppp                        shift and go to state 79
    empty                          shift and go to state 33

state 47

    (9) varsppp -> ACOR CTEI CCOR .

    PTCOMA          reduce using rule 9 (varsppp -> ACOR CTEI CCOR .)
    COMA            reduce using rule 9 (varsppp -> ACOR CTEI CCOR .)


state 48

    (101) factor -> APAR . exp CPAR
    (75) exp -> . texp expp
    (78) texp -> . gexp texpp
    (82) gexp -> . mexp gexpp
    (91) mexp -> . termino mexpp
    (96) termino -> . factor terminop
    (101) factor -> . APAR exp CPAR
    (102) factor -> . ctes
    (108) ctes -> . CTEC
    (109) ctes -> . CTEI
    (110) ctes -> . CTEF
    (111) ctes -> . ID validateExistance factorp

    APAR            shift and go to state 48
    CTEC            shift and go to state 73
    CTEI            shift and go to state 74
    CTEF            shift and go to state 75
    ID              shift and go to state 81

    exp                            shift and go to state 80
    texp                           shift and go to state 65
    gexp                           shift and go to state 68
    mexp                           shift and go to state 69
    termino                        shift and go to state 70
    factor                         shift and go to state 71
    ctes                           shift and go to state 72

state 49

    (1) program -> PROGRAM agregarTablaFunciones varss funcs MAIN APAR CPAR ALLA poptomain estatutos . CLLA

    CLLA            shift and go to state 82


state 50

    (22) estatutos -> asig . estatutop
    (30) estatutop -> . estatutos
    (31) estatutop -> . empty
    (22) estatutos -> . asig estatutop
    (23) estatutos -> . return estatutop
    (24) estatutos -> . lectura estatutop
    (25) estatutos -> . escritura estatutop
    (26) estatutos -> . cond estatutop
    (27) estatutos -> . while estatutop
    (28) estatutos -> . for estatutop
    (29) estatutos -> . exp estatutop
    (113) empty -> .
    (40) asig -> . varAs ididx igualAs asigpp PTCOMA
    (51) return -> . RETURN APAR exp CPAR PTCOMA
    (52) lectura -> . READ APAR readId ididx lecturapp CPAR PTCOMA
    (56) escritura -> . WRITE APAR escriturap escriturapp CPAR PTCOMA
    (63) cond -> . IF APAR exp checkCond THEN ALLA estatutos CLLA condpp
    (68) while -> . saveWhile APAR exp checkWhileCond DO ALLA estatutos CLLA
    (71) for -> . FOR varFor ididx IGUAL exp initFor exp beforeDo ALLA estatutos CLLA
    (75) exp -> . texp expp
    (41) varAs -> . ID
    (69) saveWhile -> . WHILE
    (78) texp -> . gexp texpp
    (82) gexp -> . mexp gexpp
    (91) mexp -> . termino mexpp
    (96) termino -> . factor terminop
    (101) factor -> . APAR exp CPAR
    (102) factor -> . ctes
    (108) ctes -> . CTEC
    (109) ctes -> . CTEI
    (110) ctes -> . CTEF
    (111) ctes -> . ID validateExistance factorp

    CLLA            reduce using rule 113 (empty -> .)
    RETURN          shift and go to state 59
    READ            shift and go to state 60
    WRITE           shift and go to state 61
    IF              shift and go to state 62
    FOR             shift and go to state 64
    ID              shift and go to state 66
    WHILE           shift and go to state 67
    APAR            shift and go to state 48
    CTEC            shift and go to state 73
    CTEI            shift and go to state 74
    CTEF            shift and go to state 75

    asig                           shift and go to state 50
    estatutop                      shift and go to state 83
    estatutos                      shift and go to state 84
    empty                          shift and go to state 85
    return                         shift and go to state 51
    lectura                        shift and go to state 52
    escritura                      shift and go to state 53
    cond                           shift and go to state 54
    while                          shift and go to state 55
    for                            shift and go to state 56
    exp                            shift and go to state 57
    varAs                          shift and go to state 58
    saveWhile                      shift and go to state 63
    texp                           shift and go to state 65
    gexp                           shift and go to state 68
    mexp                           shift and go to state 69
    termino                        shift and go to state 70
    factor                         shift and go to state 71
    ctes                           shift and go to state 72

state 51

    (23) estatutos -> return . estatutop
    (30) estatutop -> . estatutos
    (31) estatutop -> . empty
    (22) estatutos -> . asig estatutop
    (23) estatutos -> . return estatutop
    (24) estatutos -> . lectura estatutop
    (25) estatutos -> . escritura estatutop
    (26) estatutos -> . cond estatutop
    (27) estatutos -> . while estatutop
    (28) estatutos -> . for estatutop
    (29) estatutos -> . exp estatutop
    (113) empty -> .
    (40) asig -> . varAs ididx igualAs asigpp PTCOMA
    (51) return -> . RETURN APAR exp CPAR PTCOMA
    (52) lectura -> . READ APAR readId ididx lecturapp CPAR PTCOMA
    (56) escritura -> . WRITE APAR escriturap escriturapp CPAR PTCOMA
    (63) cond -> . IF APAR exp checkCond THEN ALLA estatutos CLLA condpp
    (68) while -> . saveWhile APAR exp checkWhileCond DO ALLA estatutos CLLA
    (71) for -> . FOR varFor ididx IGUAL exp initFor exp beforeDo ALLA estatutos CLLA
    (75) exp -> . texp expp
    (41) varAs -> . ID
    (69) saveWhile -> . WHILE
    (78) texp -> . gexp texpp
    (82) gexp -> . mexp gexpp
    (91) mexp -> . termino mexpp
    (96) termino -> . factor terminop
    (101) factor -> . APAR exp CPAR
    (102) factor -> . ctes
    (108) ctes -> . CTEC
    (109) ctes -> . CTEI
    (110) ctes -> . CTEF
    (111) ctes -> . ID validateExistance factorp

    CLLA            reduce using rule 113 (empty -> .)
    RETURN          shift and go to state 59
    READ            shift and go to state 60
    WRITE           shift and go to state 61
    IF              shift and go to state 62
    FOR             shift and go to state 64
    ID              shift and go to state 66
    WHILE           shift and go to state 67
    APAR            shift and go to state 48
    CTEC            shift and go to state 73
    CTEI            shift and go to state 74
    CTEF            shift and go to state 75

    return                         shift and go to state 51
    estatutop                      shift and go to state 86
    estatutos                      shift and go to state 84
    empty                          shift and go to state 85
    asig                           shift and go to state 50
    lectura                        shift and go to state 52
    escritura                      shift and go to state 53
    cond                           shift and go to state 54
    while                          shift and go to state 55
    for                            shift and go to state 56
    exp                            shift and go to state 57
    varAs                          shift and go to state 58
    saveWhile                      shift and go to state 63
    texp                           shift and go to state 65
    gexp                           shift and go to state 68
    mexp                           shift and go to state 69
    termino                        shift and go to state 70
    factor                         shift and go to state 71
    ctes                           shift and go to state 72

state 52

    (24) estatutos -> lectura . estatutop
    (30) estatutop -> . estatutos
    (31) estatutop -> . empty
    (22) estatutos -> . asig estatutop
    (23) estatutos -> . return estatutop
    (24) estatutos -> . lectura estatutop
    (25) estatutos -> . escritura estatutop
    (26) estatutos -> . cond estatutop
    (27) estatutos -> . while estatutop
    (28) estatutos -> . for estatutop
    (29) estatutos -> . exp estatutop
    (113) empty -> .
    (40) asig -> . varAs ididx igualAs asigpp PTCOMA
    (51) return -> . RETURN APAR exp CPAR PTCOMA
    (52) lectura -> . READ APAR readId ididx lecturapp CPAR PTCOMA
    (56) escritura -> . WRITE APAR escriturap escriturapp CPAR PTCOMA
    (63) cond -> . IF APAR exp checkCond THEN ALLA estatutos CLLA condpp
    (68) while -> . saveWhile APAR exp checkWhileCond DO ALLA estatutos CLLA
    (71) for -> . FOR varFor ididx IGUAL exp initFor exp beforeDo ALLA estatutos CLLA
    (75) exp -> . texp expp
    (41) varAs -> . ID
    (69) saveWhile -> . WHILE
    (78) texp -> . gexp texpp
    (82) gexp -> . mexp gexpp
    (91) mexp -> . termino mexpp
    (96) termino -> . factor terminop
    (101) factor -> . APAR exp CPAR
    (102) factor -> . ctes
    (108) ctes -> . CTEC
    (109) ctes -> . CTEI
    (110) ctes -> . CTEF
    (111) ctes -> . ID validateExistance factorp

    CLLA            reduce using rule 113 (empty -> .)
    RETURN          shift and go to state 59
    READ            shift and go to state 60
    WRITE           shift and go to state 61
    IF              shift and go to state 62
    FOR             shift and go to state 64
    ID              shift and go to state 66
    WHILE           shift and go to state 67
    APAR            shift and go to state 48
    CTEC            shift and go to state 73
    CTEI            shift and go to state 74
    CTEF            shift and go to state 75

    lectura                        shift and go to state 52
    estatutop                      shift and go to state 87
    estatutos                      shift and go to state 84
    empty                          shift and go to state 85
    asig                           shift and go to state 50
    return                         shift and go to state 51
    escritura                      shift and go to state 53
    cond                           shift and go to state 54
    while                          shift and go to state 55
    for                            shift and go to state 56
    exp                            shift and go to state 57
    varAs                          shift and go to state 58
    saveWhile                      shift and go to state 63
    texp                           shift and go to state 65
    gexp                           shift and go to state 68
    mexp                           shift and go to state 69
    termino                        shift and go to state 70
    factor                         shift and go to state 71
    ctes                           shift and go to state 72

state 53

    (25) estatutos -> escritura . estatutop
    (30) estatutop -> . estatutos
    (31) estatutop -> . empty
    (22) estatutos -> . asig estatutop
    (23) estatutos -> . return estatutop
    (24) estatutos -> . lectura estatutop
    (25) estatutos -> . escritura estatutop
    (26) estatutos -> . cond estatutop
    (27) estatutos -> . while estatutop
    (28) estatutos -> . for estatutop
    (29) estatutos -> . exp estatutop
    (113) empty -> .
    (40) asig -> . varAs ididx igualAs asigpp PTCOMA
    (51) return -> . RETURN APAR exp CPAR PTCOMA
    (52) lectura -> . READ APAR readId ididx lecturapp CPAR PTCOMA
    (56) escritura -> . WRITE APAR escriturap escriturapp CPAR PTCOMA
    (63) cond -> . IF APAR exp checkCond THEN ALLA estatutos CLLA condpp
    (68) while -> . saveWhile APAR exp checkWhileCond DO ALLA estatutos CLLA
    (71) for -> . FOR varFor ididx IGUAL exp initFor exp beforeDo ALLA estatutos CLLA
    (75) exp -> . texp expp
    (41) varAs -> . ID
    (69) saveWhile -> . WHILE
    (78) texp -> . gexp texpp
    (82) gexp -> . mexp gexpp
    (91) mexp -> . termino mexpp
    (96) termino -> . factor terminop
    (101) factor -> . APAR exp CPAR
    (102) factor -> . ctes
    (108) ctes -> . CTEC
    (109) ctes -> . CTEI
    (110) ctes -> . CTEF
    (111) ctes -> . ID validateExistance factorp

    CLLA            reduce using rule 113 (empty -> .)
    RETURN          shift and go to state 59
    READ            shift and go to state 60
    WRITE           shift and go to state 61
    IF              shift and go to state 62
    FOR             shift and go to state 64
    ID              shift and go to state 66
    WHILE           shift and go to state 67
    APAR            shift and go to state 48
    CTEC            shift and go to state 73
    CTEI            shift and go to state 74
    CTEF            shift and go to state 75

    escritura                      shift and go to state 53
    estatutop                      shift and go to state 88
    estatutos                      shift and go to state 84
    empty                          shift and go to state 85
    asig                           shift and go to state 50
    return                         shift and go to state 51
    lectura                        shift and go to state 52
    cond                           shift and go to state 54
    while                          shift and go to state 55
    for                            shift and go to state 56
    exp                            shift and go to state 57
    varAs                          shift and go to state 58
    saveWhile                      shift and go to state 63
    texp                           shift and go to state 65
    gexp                           shift and go to state 68
    mexp                           shift and go to state 69
    termino                        shift and go to state 70
    factor                         shift and go to state 71
    ctes                           shift and go to state 72

state 54
